# grimdaniel.com

./: banners.json  free_grimdark_reads.md  main.py  pyproject.toml  redirects.json
newsletters/: 2026-04-10.md
pages/: about.md  books.md  everyone-dies.md  index.md  signed-up.md  the-curse.md
pages/books/: everyone-dies.md  soldier-of-the-death-god.md  the-curse.md
pages/books/everyone-dies/: glossary.md
pages/newsletter/: 2026-04-10.md  2026-04-24.md  2026-05-01.md  2026-05-08.md  2026-05-15.md  2026-05-20.md  2026-05-22.md  2026-05-29.md  2026-06-05.md  2026-06-12.md  2026-06-19.md  2026-06-26.md  2026-07-03.md
pages/newsletters/: 2026-04-10.md
pages/reviews/: kostya.md  oath-and-ember.md  obsidian-path.md  ravenous-mother-a-healer.md  ravenous-mother-two-gatherers.md  survival-in-the-grove.md  whispers-of-the-storm.md
static/: style.css
static/books/: the-curse-daniel-roy-greenfeld.epub
templates/: index.html  robots.txt  signed_up.html  sitemap.xml
