[project]
name = "grimdaniel-com"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "air>=0.48.1",
    "fastapi[standard]>=0.135.3",
    "feedgen>=1.0.0",
    "frontmatter>=3.0.8",
    "hypercorn>=0.18.0",
    "mistletoe>=1.5.1",
    "pytz>=2026.2",
]


[tool.fastapi]
entrypoint = "main:app"
